# slow-learner

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  setup.py  slow_learner.py  tryout.py
.github/workflows/: publish-to-pypi.yml
src/slow_learner/: __init__.py  cli.py  learner.py  learnt_types.py  subtyping.py  type_learner.py  typedef_generation.py  utils.py
test/: test_is_subtype.py  test_learner.py
