[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "slow-learner"
version = "0.1.1"
authors = [{ name = "Igor Vaiman", email = "gosha.vaiman@gmail.com" }]
description = "Python type inference from a stream of data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: File Formats :: JSON",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://pypi.org/manage/project/slow-learner"
Issues = "https://github.com/nj-vs-vh/slow-learner/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

[tool.mypy]
exclude = ['build', 'setup.py']
