[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "slow-learner"
dynamic = ["version"]
authors = [{ name = "Igor Vaiman", email = "gosha.vaiman@gmail.com" }]
description = "Python type inference from a stream of data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: File Formats :: JSON",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]
dependencies = [
  "click~=8.1",
  "tqdm>=4.0.0",
]

[project.urls]
Homepage = "https://nj-vs-vh.name/project/slow-learner"
Repository = "https://github.com/nj-vs-vh/slow-learner"
Issues = "https://github.com/nj-vs-vh/slow-learner/issues"

[project.scripts]
slow-learner = "slow_learner.cli:cli"

########################################################################

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

[tool.mypy]
exclude = ['build', 'setup.py']
